--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -31,6 +31,8 @@ $grey-900:            #212529;
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
+$beige-color: #fffeff !default;
+$red-color2: #d11d2e !default;
 
 // Theme colors
 
