--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: default
     <h1 class="post-title">
      {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
     </h1>
-     <p class="desc">{{ page.description }}</p>
+    <p class="desc">{{ page.description }}</p>
   </header>
 
   <article>
@@ -16,8 +16,8 @@ layout: default
     <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
       {% if page.profile.image %}
         {% assign profile_image_path = page.profile.image | prepend: 'assets/img/' %}
-        {% include figure.html 
-          path=profile_image_path 
+        {% include figure.html
+          path=profile_image_path
           class="img-fluid z-dept-1 rounded"%}
       {% endif %}
       {% if page.profile.address %}
@@ -28,7 +28,7 @@ layout: default
     </div>
     {% endif %}
 
-    <div class="clearfix">
+    <div class="clearfix" text-align=justify>
       {{ content }}
     </div>
 
