--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,14 +2,9 @@
 ---
 
 <div class="row">
-  <div class="col-sm-2 abbr">
-  {% if entry.abbr %}
-    {% if site.data.venues[entry.abbr] %}
-    <abbr class="badge"><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-    {% else %}
-    <abbr class="badge">{{entry.abbr}}</abbr>
-    {% endif %}
-  {% endif %}
+    {% capture teaser %}{{ entry.teaser | prepend: 'assets/img/'}}{% endcapture %}
+  <div class="col-sm-2 mt-3 mt-md-0">
+        {% include figure.html path=teaser class="img-fluid rounded z-depth-1" %}
   </div>
 
   <div id="{{entry.key}}" class="col-sm-8">
@@ -34,7 +29,7 @@
               {% endif %}
             {% endfor %}
           {% endif %}
-          
+
           {% if forloop.length == 1 %}
             {% if author_is_self %}
               <em>{{author.last}}, {{author.first}}</em>
