--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,8 @@ $grey-color-dark:     #1C1C1D;
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
+$beige-color: #fffeff !default;
+$red-color2: #d11d2e !default;
 
 // Theme colors
 
