--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -14,9 +14,21 @@
 
 <div class="row">
     {% capture teaser %}{{ entry.teaser | prepend: 'assets/img/'}}{% endcapture %}
-  <div class="col-sm-2 mt-3 mt-md-0">
-        {% include figure.html path=teaser class="img-fluid rounded z-depth-1" %}
-  </div>
+    {% if entry.teaser %}
+      <div class="col-sm-2 mt-3 mt-md-0">
+            {% include figure.html path=teaser class="img-fluid rounded z-depth-1" %}
+      </div>
+    {% else %}
+    <div class="col-sm-2 abbr">
+      {% if entry.abbr %}
+        {% if site.data.venues[entry.abbr] %}
+        <abbr class="badge"><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
+        {% else %}
+        <abbr class="badge">{{entry.abbr}}</abbr>
+        {% endif %}
+      {% endif %}
+    </div>
+    {% endif %}
 
   <div id="{{entry.key}}" class="col-sm-8">
     {% if entry.type == "thesis" %}
