--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -15,7 +15,7 @@
 <div class="row">
     {% capture teaser %}{{ entry.teaser | prepend: 'assets/img/'}}{% endcapture %}
     {% if entry.teaser %}
-      <div class="col-sm-2 mt-3 mt-md-0">
+      <div class="col-sm-2 mt-md-0">
             {% include figure.html path=teaser class="img-fluid rounded z-depth-1" %}
       </div>
     {% else %}
