--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,6 +76,15 @@
           {% endif %}
           {% endif %}
           {% endfor %}
+
+         <li class="nav-item {% if page.title == 'CV' %}active{% endif %}">
+            <a class="nav-link" href="{{ 'assets/pdf/resume.pdf' | relative_url }}">
+              CV
+              {% if page.title == "CV" %}
+                <span class="sr-only">(current)</span>
+              {% endif %}
+            </a>
+          </li>
           {% if site.enable_darkmode %}
             <div class = "toggle-container">
               <a id = "light-toggle">
