Add buttons for news

--- a/_includes/scripts/jquery.html
+++ b/_includes/scripts/jquery.html
@@ -1,2 +1,3 @@
 <!-- jQuery -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@{{ site.jquery.version }}/dist/jquery.min.js" integrity="{{ site.jquery.integrity }}" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/{{ site.jquery.version }}/jquery.min.js" integrity="{{ site.jquery.integrity }}" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
