--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,24 +1,28 @@
 <div class="news">
-  <h2>news</h2>
-  {% if site.news  %}
+    <h2>news</h2>
+    {% if site.news  %}
     <div class="table-responsive">
-      <table class="table table-sm table-borderless">
-      {% assign news = site.news | reverse %}
-      {% for item in news limit: site.news_limit %}
-        <tr>
-          <th scope="row"><abbr class="badge news-title">{{ item.date | date: "%b %-d, %Y" }}</abbr></th>
-          <td>
-            {% if item.inline %}
-              {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
-            {% else %}
-              <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
-            {% endif %}
-          </td>
-        </tr>
-      {% endfor %}
-      </table>
+        <table id="news-table" class="table table-sm table-borderless">
+            <thead style="display: none;"><th></th><th></th></thead>
+        <tbody>
+            {% assign news = site.news | reverse %}
+            {% for item in news %}
+            <tr>
+                <th scope="row"><abbr class="badge news-title">{{ item.date | date: "%b %-d, %Y" }}</abbr></th>
+                <td>
+                    {% if item.inline %}
+                    {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+                    {% else %}
+                    <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+        </table>
     </div>
-  {% else %}
+    {% else %}
     <p>No news so far...</p>
-  {% endif %}
+    {% endif %}
 </div>
+
