Add buttons for news

--- a/_includes/scripts/misc.html
+++ b/_includes/scripts/misc.html
@@ -11,5 +11,9 @@ $(function () {$('[data-toggle="tooltip"]').tooltip()})
 <script src="{{ '/assets/js/zoom.js' | relative_url }}"></script>
 {% endif %}
 
+<!-- Load Scramble JS -->
+<script src="{{'/assets/js/scramble.js' | relative_url }}"></script>
+
 <!-- Load Common JS -->
 <script src="{{ '/assets/js/common.js' | relative_url }}"></script>
+
