--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -211,6 +211,19 @@ blockquote {
 .news-title {
     color: var(--global-text-color);
     background-color: var(--global-theme-color);
+    display: inline-block;
+}
+
+.paginate_button {
+    padding-left:0.5rem;
+    padding-right:0.5rem;
+}
+
+.btn.news-button {
+    color: var(--global-white-color);
+    background-color: var(--global-theme-color);
+    margin-top: -1.5rem;
+    padding: 0.3rem 1.0rem;
 }
 
 // Social (bottom)
