--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -29,6 +29,8 @@
   type="text/css"
   href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
 >
+<link defer rel="stylesheet" href="{{ '/assets/fonts/sans/cmun-sans.css' | relative_url | bust_file_cache }}">
+
 
 <!-- Code Syntax Highlighting -->
 <link
