--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,9 +17,7 @@ li,
 span,
 strong {
   color: var(--global-text-color);
-//   font-family: 'Computer Modern Sans';
-//   color: var(--global-text-color);
-//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Computer Modern Sans';
 }
 
 hr {
@@ -376,7 +374,7 @@ ul.task-list input[type="checkbox"] {
   text-align: center;
 
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
 
     a {
       i::before {
