--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -30,7 +30,9 @@
   href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
 >
 <link defer rel="stylesheet" href="{{ '/assets/fonts/sans/cmun-sans.css' | relative_url | bust_file_cache }}">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
 <!-- Code Syntax Highlighting -->
 <link
