--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,7 +17,6 @@ li,
 span,
 strong {
   color: var(--global-text-color);
-  font-family: 'Computer Modern Sans';
 }
 
 hr {
@@ -288,7 +287,7 @@ ul.task-list input[type="checkbox"] {
 
   .navbar-nav .nav-item.active > .nav-link {
     background-color: inherit;
-    font-weight: bolder;
+    font-weight: bold;
     color: var(--global-theme-color);
 
     &:hover {
@@ -709,7 +708,7 @@ footer.sticky-bottom {
       }
 
       .title {
-        font-weight: bolder;
+        font-weight: bold;
       }
 
       .author {
