--- a/_layouts/distill.liquid
+++ b/_layouts/distill.liquid
@@ -101,6 +101,9 @@
           </d-contents>
         {% endif %}
         {{ content }}
+        {% if page.citation %}
+          {% include citation.liquid %}
+        {% endif %}
       </d-article>
 
       <d-appendix>
