--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -502,12 +502,13 @@ footer.sticky-bottom {
 .header-bar {
   border-bottom: 1px solid var(--global-divider-color);
   text-align: center;
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-bottom: 3rem;
 
   h1 {
     color: var(--global-theme-color);
-    font-size: 5rem;
+    font-weight: bold;
+    font-size: 4rem;
   }
 }
 
